--- a/htdocs/themes/foomo-960/css/reset.css
+++ b/htdocs/themes/foomo-960/css/reset.css
@@ -1,6 +1,15 @@
 /* =Reset default browser CSS. Based on work by Eric Meyer: http://meyerweb.com/eric/tools/css/reset/index.html
 -------------------------------------------------------------- */
 
+* {
+	color: inherit;
+	font-size: inherit;
+	font-style: inherit;
+	line-height: inherit;
+	font-weight: inherit;
+	text-decoration: inherit;
+}
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -44,3 +53,5 @@ table {
 a img {
 	border: none;
 }
+
+
