--- a/htdocs/themes/foomo-960/css/mixins.less
+++ b/htdocs/themes/foomo-960/css/mixins.less
@@ -1,95 +1,5 @@
-/*
-	Variable Grid System.
-	Learn more ~ http://www.spry-soft.com/grids/
-	Based on 960 Grid System - http://960.gs/
-
-	Licensed under GPL and MIT.
-*/
-
-/*
-  Forces backgrounds to span full width,
-  even if there is horizontal scrolling.
-  Increase this if your layout is wider.
-
-  Note: IE6 works fine without this fix.
-*/
-
-@grid-body() {
-  min-width: @grid-width;
-}
-
-/* Containers
-----------------------------------------------------------------------------------------------------*/
-
-@container(@width: @grid-width) {
-	margin-left: auto;
-	margin-right: auto;
-	width: @width;
-}
-
-/* Grid >> Global
-----------------------------------------------------------------------------------------------------*/
-
-@grid(@column: 1; @column-count: @grid-column-count; @gutter-width: @grid-gutter-width; @width: @grid-width) {
-	display:inline;
-	float: left;
-	position: relative;
-	margin-left: @gutter-width / 2;
-	margin-right: @gutter-width / 2;
-	width: (((@width / @column-count) * @column) - @gutter-width);
-}
-
-/* Push Space >> x Columns
-----------------------------------------------------------------------------------------------------*/
-
-
-@push(@column: 1; @column-count: @grid-column-count; @gutter-width: @grid-gutter-width; @width: @grid-width) {
-	position: relative;
-	left: (((@width - (@column-count * @gutter-width)) / @column-count) + @gutter-width) * @column;
-}
-
-
-/* Pull Space >> x Columns
-----------------------------------------------------------------------------------------------------*/
-
-
-@pull(@column: 1; @column-count: @grid-column-count; @gutter-width: @grid-gutter-width; @width: @grid-width) {
-	position: relative;
-	left: -(((@width - (@column-count * @gutter-width)) / @column-count) + @gutter-width) * @column;
-}
-
-
-/* Grid >> Children (Alpha ~ First; Omega ~ Last)
-----------------------------------------------------------------------------------------------------*/
-
-@alpha() {
-	margin-left: 0;
-}
-
-@omega() {
-	margin-right: 0;
-}
-
-
-/* Prefix Extra Space >> x Columns
-----------------------------------------------------------------------------------------------------*/
-
-
-@prefix(@column: 1; @column-count: @grid-column-count; @gutter-width: @grid-gutter-width; @width: @grid-width) {
-	position: relative;
-	padding-left: (((@width - (@column-count * @gutter-width)) / @column-count) + @gutter-width) * @column;
-}
-
-
-
-/* Suffix Extra Space >> x Columns
-----------------------------------------------------------------------------------------------------*/
-
-@suffix(@column: 1; @column-count: @grid-column-count; @gutter-width: @grid-gutter-width; @width: @grid-width) {
-	position: relative;
-	padding-right: (((@width - (@column-count * @gutter-width)) / @column-count) + @gutter-width) * @column;
-}
-
+@import "../../foomo-960/css/grid";
+@import "../../foomo-960/css/css3";
 
 /* `Clear Floated Elements
 ----------------------------------------------------------------------------------------------------*/
@@ -140,4 +50,42 @@
 	zoom: 1;
 	@clearbefore();
 	@clearafter();
+}
+
+
+/* Logos
+----------------------------------------------------------------------------------------------------*/
+
+@image-replace-link(@width; @height; @image) {
+	a {
+		width: @width;
+		height: @height;
+		display: block;
+		overflow: hidden;
+		text-indent: -9999px;
+		background: @image no-repeat;
+	}
+}
+
+@hr(@color) {
+	height: 1px;
+	color: @color;
+	border: 0 solid @color;
+	background-color: @color;
+	text-align: center;
+	width: 100%;
+}
+
+
+@hlist(@float: left) {
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
+
+	li {
+		list-style-type: none;
+		float: @float;
+		padding: 0;
+		margin: 0;
+	}
 }
