--- a/htdocs/themes/foomo-960/css/layout.less
+++ b/htdocs/themes/foomo-960/css/layout.less
@@ -9,10 +9,15 @@ html {
 	background-color: @background-color;
 }
 
+#wrapper {
+	overflow: auto;
+}
+
 
 /* --- container --------------------------------------------------------------- */
 
 #container {
+	overflow: auto;
 
 	#content {
 		@grid > @grid(12);
