--- a/htdocs/themes/foomo-960/css/typography.less
+++ b/htdocs/themes/foomo-960/css/typography.less
@@ -1,6 +1,3 @@
-html {
-	font-size:100.01%;
-}
 body {
 	color: @color;
 	font-style: normal;
@@ -14,20 +11,19 @@ h1, h2, h3, h4, h5, h6, p, blockquote, address, pre, code, tt {
 	margin-bottom: 1.5em;
 }
 h1 {
-	font-size: 175%;
+	font-size: 1.5em;
 	margin-bottom: 1em;
 }
 h2 {
-	font-size: 150%;
+	font-size: 1.25em;
 	margin-bottom: 1em;
 }
 h3 {
-	font-size: 125%;
+	font-size: 1.1em;
 	margin-bottom: 1em;
 }
 h4 {
-	font-size: 100%;
-	margin-bottom: 1em;
+	font-weight: bold;
 }
 strong, dfn {
 	font-weight: bold;
