--- a/htdocs/themes/foomo-960/css/css3.less
+++ b/htdocs/themes/foomo-960/css/css3.less
@@ -12,9 +12,9 @@
 		-moz-border-radius: @attr;
 	}
 
-	@background-gradient(@color1, @color2){
-		background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, @color1), color-stop(1, @color2) );
-		background:-moz-linear-gradient( center top, @color1 5%, @color2 100% );
-		filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='@color1', endColorstr='@color2');
+	@background-gradient(@color1; @color2){
+		background: -moz-linear-gradient(center top, @color1 0%, @color2 100%);
+		background: -webkit-gradient(linear, left top, left bottom, from(@color1),to(@color2));
+		filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=@color1, endColorstr=@color2);	
 	}
 }
