--- a/htdocs/themes/foomo-960/css/typography.less
+++ b/htdocs/themes/foomo-960/css/typography.less
@@ -9,9 +9,10 @@ body {
 h1, h2, h3, h4, h5, h6, p, blockquote, address, pre, code, tt {
 	line-height: @line-height;
 	margin-bottom: 1.5em;
+	font-weight: normal;
 }
 h1 {
-	font-size: 1.5em;
+	font-size: 1.6em;
 	margin-bottom: 1em;
 }
 h2 {
@@ -21,9 +22,6 @@ h2 {
 h3 {
 	font-size: 1.1em;
 	margin-bottom: 1em;
-}
-h4 {
-	font-weight: bold;
 }
 strong, dfn {
 	font-weight: bold;
